--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 .container{
-    width: 1200px;
-    height: 900px;
-    margin: 0 auto;
+    max-width: 1200px;
+    height: 800px;
+    margin: 3% auto;
 }
 .tree {
     height: 75%;
     width: 100%;
 }
 .root{
-    width: 1200px;
+    max-width: 1200px;
     text-align: center;
     font-size: 30px;
 }
@@ -19,7 +19,9 @@
 }
 .addNumber{
     height: 25%;
+    width: 100%;
     text-align: center;
+    margin-top: 3%;
 }
 .button {
     margin: 20px;
