--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,28 @@
+.wrapper{
+    position: relative;
+    /*max-width: 1200px;*/
+    height: 900px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#canvas{
+    width: 100%;
+    height: 700px;
+}
+
 .container{
-    max-width: 1200px;
-    height: 800px;
-    margin: 3% auto;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0.1%;
 }
 .tree {
     height: 75%;
     width: 100%;
 }
 .root{
-    max-width: 1200px;
+    /*max-width: 1200px;*/
     text-align: center;
     font-size: 30px;
 }
@@ -21,7 +35,7 @@
     height: 25%;
     width: 100%;
     text-align: center;
-    margin-top: 3%;
+    margin-top: 2%;
 }
 .button {
     margin: 20px;
@@ -31,6 +45,6 @@
     background-color: aqua;
     border-radius: 50%;
     width: fit-content;
-    min-width: 30px;
+    min-width: 35px;
     margin: 0 auto;
 }
